# LittleShakespeare

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  config.py  inference.py  main.py  model_components.py  preprocessing.py  pyproject.toml  requirements.txt  test_preprocessing.py  training.py  utils.py
benchmarks/: leaderboard.csv  leaderboard.md
benchmarks/compare/: 20260717-223316_ids-0-1-5.md
scripts/: generate.py  train.py
src/little_shakespeare/: checkpoint.py  config.py  run_dir.py
src/little_shakespeare/data/: dataset.py  splits.py  tokenizer.py
src/little_shakespeare/eval/: compare.py  diversity.py  evaluate.py  leaderboard.py  memorization.py  perplexity.py  prompts.txt  significance.py
src/little_shakespeare/inference/: generator.py
src/little_shakespeare/model/: transformer.py
src/little_shakespeare/training/: pipeline.py  reporting.py  trainer.py
tests/: test_run_dir.py
tests/data/: test_splits.py  test_tokenizer.py
tests/eval/: test_diversity.py  test_leaderboard.py  test_memorization.py  test_perplexity.py  test_significance.py
